--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <form id="alarmForm">
     <p id="datetime"></p>
     <div class="day-labels">
+      <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <span>Mon</span>
       <span>Tue</span>
       <span>Wed</span>
@@ -23,6 +24,7 @@
 
     <div class="alarm">
       <span>7:00</span>
+      <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <span><input type="checkbox" name="alarm2" value="Mon"></span>
       <span><input type="checkbox" name="alarm2" value="Tue"></span>
       <span><input type="checkbox" name="alarm2" value="Wed"></span>
@@ -33,6 +35,7 @@
     </div>
     <div class="alarm">
       <span>7:05</span>
+      <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Mon">
       <input type="checkbox" name="alarm2" value="Tue">
       <input type="checkbox" name="alarm2" value="Wed">
@@ -43,6 +46,7 @@
     </div>
     <div class="alarm">
       <span>7:10</span>
+      <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Mon">
       <input type="checkbox" name="alarm2" value="Tue">
       <input type="checkbox" name="alarm2" value="Wed">
@@ -53,6 +57,7 @@
     </div>
     <div class="alarm">
       <span>7:15</span>
+      <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Mon">
       <input type="checkbox" name="alarm2" value="Tue">
       <input type="checkbox" name="alarm2" value="Wed">
