--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     </div>
     <br>
     <button type="button" onclick="addNewAlarm()">Add New Alarm</button>
+    <button type="button" onclick="spray()">SPRAY!</button>
   </form>
   <p id="response"></p>
 
