--- a/index.html
+++ b/index.html
@@ -37,33 +37,51 @@
       <span>7:05</span>
       <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Mon">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Tue">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Wed">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Thu">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Fri">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Sat">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Sun">
     </div>
     <div class="alarm">
       <span>7:10</span>
       <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Mon">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Tue">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Wed">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Thu">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Fri">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Sat">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Sun">
     </div>
     <div class="alarm">
       <span>7:15</span>
       <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Mon">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Tue">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Wed">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Thu">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Fri">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Sat">
+      <span>&nbsp;&nbsp;&nbsp;</span>
       <input type="checkbox" name="alarm2" value="Sun">
     </div>
     <br>
